...
        android:fontFamily="@font/roboto"
        android:text="@string/let_s_sign_in_to_your_account"
        android:textSize="16sp" />

    <!-- Username TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:textSize="16sp"
            android:inputType="textVisiblePassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

...
<!--        style="@style/Widget.Material3.Button"-->
<!--        android:textSize="14sp"-->
<!--        app:strokeColor="#FFFFFF" />-->

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signUpBut"
            style="@style/Widget.Material3.Button"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="4dp"
...
