...
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon" />

    <!-- Onboarding Body !-->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/onboarding_illustration"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <!-- Get Started Button !-->
    <Button
        android:id="@+id/getStartedButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="0dp"
...
