...
        android:icon="@drawable/ic_heart"
        android:title="Saved"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="Account"
        android:enabled="true"
        app:showAsAction="ifRoom"/>


...
