...

    <!-- Logout Section -->

    <!-- Bottom Navigation -->

    <LinearLayout
        android:id="@+id/linearLayoutLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_box"
...
