...
            android:contentDescription="@string/arrow"
            android:src="@drawable/ic_arrow_right"
            app:tint="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_box"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutProfileSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvDeleteAccount"
            android:layout_width="0dp"
...
