<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_trash"
        android:title="Delete"
        android:contentDescription="Delete Entry"
        app:showAsAction="always"
     app:iconTint="#1D1B20"/>
</menu>
