<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="#F6FAFE"
    android:orientation="vertical"
    >

    <!-- Back Button to Login Page -->

    <ImageButton
        android:id="@+id/backButton"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_small_left"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        app:tint="?android:attr/textColorPrimary"
        android:contentDescription="@string/back_button"/>

    <!-- Sign Up Header -->
    <TextView
        android:id="@+id/signup_header"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sign_up"
        android:textColor="#002114"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/let_s_create_a_new_account"
        android:textSize="16sp" />

    <!-- Sign Up Body -->


    <!-- Full Name TextInputLayout -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePictureLayout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/profile_picture_avatar"
        android:src="@drawable/generic_avatar" />


    <Button
        android:id="@+id/uploadImageBut"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/upload_image"
        android:textColor="#206487"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameLayout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/full_name"
            android:textSize="16sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="textPersonName"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Username TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsernameCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:textSize="16sp"
            android:inputType="textVisiblePassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Date of Brith TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdateLayout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/date_of_birth"
            android:textSize="16sp"
            android:inputType="none"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone Number TextInputLayout -->

    <!-- Address TextInputLayout -->


    <!-- Save Button -->
    <Button
        android:id="@+id/continueSignupBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#206487"
        android:fontFamily="@font/roboto_medium"
        android:stateListAnimator="@null"
        android:text="@string/save_signup_information"
        android:textAllCaps="false"
        style="@style/Widget.Material3.Button"
        android:textSize="16sp" />

</LinearLayout>